# mini-cmake-qt

./: CMakeLists.txt
src/: mainwindow.cc  mainwindow.h
